SigmaCodebackup3rdSep/objects/Time_Base_Inventory__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_for_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal for Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_to_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal to Order</label>
        <type>Checkbox</type>
    </fields>
    <label>Time Base Inventory</label>
</CustomObject>